# rag-lab

./: .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_project_model.py  0002_data_asset_upload_fields.py  0003_asset_manifests.py  0004_asset_manifest_cascade.py  0005_parameter_set_category.py
app/: __init__.py  main.py
app/adapters/embeddings/: __init__.py  base.py
app/adapters/vectorstores/: qdrant_store.py
app/api/: ask.py  datasets.py  experiments.py  health.py  projects.py  retrieve.py  runtime.py
app/core/: config.py
app/db/: models.py
app/models/: api.py  domain.py
app/services/: artifacts.py  chunking.py  data_assets.py  datasets.py  derived_cache.py  derived_cache_cleanup.py  embeddings.py  evaluation.py  file_inspection.py  ground_truth.py  gt_authoring_pack.py  hashing.py  parent_units.py  preparation.py  rerankers.py  runtime_cache.py  sparse.py
docs/: API_CONTRACTS.md  ARCHITECTURE.md  ARTIFACTS.md  CITATIONS.md  CONFIGS.md  DATA_POLICY.md  DECISIONS.md  DEVELOPMENT_WORKFLOW.md  DOMAIN_MODEL.md  EVALUATION.md  EXPERIMENTS.md  PRODUCT_SPEC.md  PROJECT_BRIEF.md  PROMPTING.md  RAG_PATTERNS.md  RECIPE_FORMAT.md  ROADMAP.md  TESTING.md  UI_SPEC.md
tests/: conftest.py  test_health.py  test_parent_units.py  test_projects_api.py
ui/: index.html  package-lock.json  package.json  tsconfig.json
ui/src/: App.tsx  styles.css
ui/src/api/: client.ts
ui/src/layout/: AppShell.tsx
ui/src/pages/: AnswerPlaygroundPage.tsx  ChunkExplorerPage.tsx  DataPage.tsx  (+15 more)
