[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-lab"
version = "0.1.0"
description = "Experimental workbench for reproducible RAG pipeline testing."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13,<2.0",
  "fastapi>=0.111,<1.0",
  "langchain-text-splitters>=0.3,<1.0",
  "python-multipart>=0.0.9,<1.0",
  "psycopg[binary]>=3.1,<4.0",
  "pymupdf>=1.24,<2.0",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.2,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.29,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.1,<9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]
